...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propertiesTableBgColor"
            android:textAppearance="@style/propertiesTableKey" />

        <Spinner
            android:id="@+id/viewFontColorValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />


    </TableRow>
...
