...
    <string name="done">done</string>
    <string name="your_message_successfully_sent">Your message was successfully sent.</string>
    <string name="feedback_thank_you">Thank you!</string>
    <string name="notification_semicolon">Every command must end with a semicolon.</string>
    <string name="notification_space">Commands must be written exactly as presented.</string>
    <string name="install_permission_request">We\'re about to install your app, we just need your permission first</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_your_app">Downloading your app…</string>
    <string name="downloading_this_is_so_exciting">This is so exciting!</string>
    <string name="well_done">Well Done</string>
    <string name="completed_first_practice">You completed your first practice.</string>
    <string name="here_well_write_code">Here we\'ll write code after we\'ll learn how.</string>
...
